SI-108 saved jobs list in frontend done